# notes-improver

./: .gitignore  README.md  main.py  notes  notes.py  notes_improver_template.md  prompt.py  pyproject.toml
cli/: search_notes_by_text.py
prompts/: syncing_template.md  system_prompt.md
tests/: conftest.py
tests/unit_tests/: test_chat.py  test_get_files_with_text.py  test_get_md_file_content.py  test_get_notes_dir.py  test_search_files_with_keywords.py  test_search_notes_by_keywords.py  test_search_notes_by_text.py  test_sync_notes.py
tests/unit_tests/utils/bot/: test_ask_model.py
tests/unit_tests/utils/config/: test_get_notes_dir.py
tests/unit_tests/utils/files/: test_get_all_md_files_content.py  test_get_files_to_parse.py  test_get_files_with_text.py  test_get_md_file_content.py  test_search_files_with_keywords.py
tests/unit_tests/utils/llm/: test_parse_files.py
utils/: bot.py  config.py  files.py  llm.py
